--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
       href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/0b420d7436.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>
