--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       src="https://kit.fontawesome.com/0b420d7436.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </head>
   <body>
     <noscript>
